test_output.txt

============================================================
Poly-Trader Ѕў­БХчУвДњИе (v3)
ЎЩЖЁ: 2026-04-17T21:14:48.917684 UTC
============================================================

============================================================
1. РЩЎзЕВКcРЫЌd
============================================================
[FAIL] ЏЪЅЂ: requirements.txt
[FAIL] ЏЪЅЂ: config.yaml
[FAIL] ЏЪЅЂ: config.py
[FAIL] ЏЪЅЂ: database/models.py
[FAIL] ЏЪЅЂ: utils/logger.py
[FAIL] ЏЪЅЂ: data_ingestion/collector.py
[FAIL] ЏЪЅЂ: data_ingestion/eye_binance.py
[FAIL] ЏЪЅЂ: data_ingestion/ear_polymarket.py
[FAIL] ЏЪЅЂ: data_ingestion/nose_futures.py
[FAIL] ЏЪЅЂ: data_ingestion/tongue_sentiment.py
[FAIL] ЏЪЅЂ: data_ingestion/body_liquidation.py
[FAIL] ЏЪЅЂ: feature_engine/preprocessor.py
[FAIL] ЏЪЅЂ: model/predictor.py
[FAIL] ЏЪЅЂ: model/train.py
[FAIL] ЏЪЅЂ: execution/risk_control.py
[FAIL] ЏЪЅЂ: execution/order_manager.py
[FAIL] ЏЪЅЂ: server/main.py
[FAIL] ЏЪЅЂ: server/routes/api.py
[FAIL] ЏЪЅЂ: server/senses.py
[FAIL] ЏЪЅЂ: web/package.json
[FAIL] ЏЪЅЂ: web/src/pages/Dashboard.tsx

============================================================
2. Python ЛyЊkРЫЌd
============================================================
[FAIL] Poly-Trader\get_current_data.py:   File "C:\Users\Kazuha\repo\Poly-Trader\get_current_data.py", line 1
    print('FNG:' + str(latest[1]))) 
                                  ^
SyntaxError: unmatched ')'

[FAIL] Poly-Trader\get_current_data_fixed.py:   File "C:\Users\Kazuha\repo\Poly-Trader\get_current_data_fixed.py", line 1
    print('FNG:' + str(latest[1]))) 
                                  ^
SyntaxError: unmatched ')'

[FAIL] Poly-Trader\temp_ic.py:   File "C:\Users\Kazuha\repo\Poly-Trader\temp_ic.py", line 25
    '    c.execute(f"""' >> temp_ic.py && echo '        SELECT f.{col_name}, l.future_return_pct' >> temp_ic.py && echo '        FROM features_normalized f' >> temp_ic.py && echo '        JOIN labels l ON f.timestamp = l.timestamp' >> temp_ic.py && echo '        WHERE l.horizon_minutes = 1440' >> temp_ic.py && echo '        ORDER BY f.timestamp DESC' >> temp_ic.py && echo '        LIMIT 1000' >> temp_ic.py && echo '    """)'  
                                        ^
SyntaxError: invalid syntax

[FAIL] webui_forge_cu121_torch231\system\python\Lib\site-packages\aenum\_py2.py:   File "C:\Users\Kazuha\repo\webui_forge_cu121_torch231\system\python\Lib\site-packages\aenum\_py2.py", line 5
    raise exc, None, tb
             ^
SyntaxError: invalid syntax

[FAIL] webui_forge_cu121_torch231\webui\venv\Lib\site-packages\aenum\_py2.py:   File "C:\Users\Kazuha\repo\webui_forge_cu121_torch231\webui\venv\Lib\site-packages\aenum\_py2.py", line 5
    raise exc, None, tb
             ^
SyntaxError: invalid syntax


============================================================
3. МвВеОЩЄJДњИе
============================================================
[OK] database.models
[OK] utils.logger
[OK] config
[OK] data_ingestion.collector
[OK] feature_engine.preprocessor
[OK] model.predictor
[OK] execution.risk_control
[OK] server.senses

============================================================
8. ЗPЉxЄоРКЏuЙъМЦОкДњИе
============================================================
  ЗPЉxЄРМЦ: {'eye': 0.95, 'ear': 0.4557, 'nose': 0.8999, 'tongue': 0.95, 'body': 0.95, 'pulse': 0.2024, 'aura': 0.95, 'mind': 0.8408}
[OK] ЗPЉxЄРМЦІГЏuЙъХмВЇ
[OK] ЉвІГЄРМЦІb 0~1 НdГђЄК
[OK] ЋиФГ: 72ЄР, buy
[OK] ЅПГWЄЦЈчМЦЅПНT

============================================================
9. ЋeКн TypeScript НsФЖРЫЌd
============================================================
[FAIL] web/ ЅиП§ЄЃІsІb

============================================================
10. МЦОкЋ~НшДњИе
============================================================
  Raw: 6803, Features: 13258
[OK] feat_eye_dist: std=4.1443, unique=100
[OK] feat_ear_zscore: std=0.0018, unique=8
[OK] feat_nose_sigmoid: std=0.1573, unique=97
[OK] feat_tongue_pct: std=0.3144, unique=95
[OK] feat_body_roc: std=0.4846, unique=88

============================================================
ДњИеС`ЕВ
============================================================
[FAIL] РЩЎзЕВКc
[FAIL] ЛyЊkРЫЌd
[PASS] МвВеОЩЄJ
[PASS] ЗPЉxЄоРКЏuЙъМЦОк
[FAIL] ЋeКн TypeScript
[PASS] МЦОкЋ~Нш

С`­p: 3/6 ГqЙL

[FAIL] 3 ЖЕЅЂБб: РЩЎзЕВКc, ЛyЊkРЫЌd, ЋeКн TypeScript
